--- a/Salary_Analysis.ipynb
+++ b/Salary_Analysis.ipynb
@@ -12,8 +12,7 @@
         "fI5b-2Nerb0b",
         "AjdY4R0XnU_j"
       ],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -24,16 +23,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/hridayanikaruna/SalaryAnalysis/blob/main/Salary_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
